--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies2.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies2.cshtml
@@ -6,33 +6,33 @@
 
     .AddColumn(column => column
         .For(model => model.Name)
+        .LinkTo(model => $"https://www.google.com/search?q={System.Web.HttpUtility.UrlEncode(model.Name)}", target: "_blank")
         .Sortable()
-        .AddCssStyle("width:21%"))
+        .AddLabelCssStyle("width:21%"))
 
     .AddColumn(column => column
         .For(model => model.Director)
-        .Sortable()
-        .AddCssStyle("width:21%"))
+        .AddLabelCssStyle("width:21%"))
 
     .AddColumn(column => column
         .Label("Genre")
         .DisplayAs(model => model.Genre.ToUpper())
-        .LinkTo(model => "https://www.google.com", target: "_blank")
         .SortableBy(model => model.Genre)
-        .AddCssStyle("width:21%")
-        .AddCssStyle("font-weight:bold"))
+        .AddLabelCssStyle("width:21%")
+        .AddItemCssStyle("font-weight:bold"))
 
     .AddColumn(column => column
         .Label("Name not Encoded")
         .DisplayAs(model => model.Name)
         .Encoded(false)
-        .AddCssStyle("width:21%"))
+        .AddLabelCssStyle("width:21%"))
 
     .AddColumnFor(model => model.Released)
 
     .AddCssClass("table-striped")
     .AddCssClass("table-sm")
 
+    .Sortable()
     .DefaultSortBy(model => model.Name, SortOrder.Ascending)
 
     .AddSearch(
