Grid: adding spaces to field name based on Pascal case TinyTable: added extension to convert an arbitray model to a Dictionary to use in a TinyTable.

--- a/Sockethead.Razor/Views/Shared/_TinyTable.cshtml
+++ b/Sockethead.Razor/Views/Shared/_TinyTable.cshtml
@@ -4,8 +4,8 @@
         @foreach (var kvp in Model)
         {
             <tr>
-                <td style="width: 120px;"><div class="pull-right"><strong>@kvp.Key</strong></div></td>
-                <td class="wrapword"> @Html.Raw(@kvp.Value?.ToString())</td>
+                <td style="width: 140px;"><div class="text-right"><strong>@kvp.Key</strong></div></td>
+                <td class="wrapword"> @kvp.Value?.ToString()</td>
             </tr>
         }
     </table>
