--- a/Sockethead.Razor/Views/Shared/_SHGridTable.cshtml
+++ b/Sockethead.Razor/Views/Shared/_SHGridTable.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Sockethead.Razor.Grid
 @model SimpleGridViewModel
 @{ 
-    string RenderLabel(SimpleGridColumnHeader cl)
+    string RenderLabel(ColumnHeader cl)
     {
         if (cl.SortUrl == null)
             return cl.Display;
@@ -16,19 +16,19 @@
         return $"<a href='{cl.SortUrl}'>{cl.Display}</a>{arrow}";
     }
 }
-<table @Html.Raw(Model.Css)>
-    <tr>
+<table @Html.Raw(Model.Css.TableCss)>
+    <tr @Html.Raw(Model.Css.HeaderCss)>
         @foreach (var col in Model.Columns)
         {
-            <th @Html.Raw(col.HeaderDetails.Css())>@Html.Raw(RenderLabel(col.HeaderDetails))</th>
+            <th @Html.Raw(col.HeaderCss)>@Html.Raw(RenderLabel(col.HeaderDetails))</th>
         }
     </tr>
     @foreach (object item in Model.Rows)
     {
-        <tr>
+        <tr @Html.Raw(Model.Css.RowCss)>
             @foreach (var col in Model.Columns)
             {
-                <td @Html.Raw(col.Css())>@Html.Raw(col.DisplayRender(item))</td>
+                <td @Html.Raw(col.ItemCss)>@Html.Raw(col.DisplayRender(item))</td>
             }
         </tr>
     }
