--- a/Sockethead.Web/Areas/Samples/Views/Pager/Sample1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Sample1.cshtml
@@ -5,7 +5,7 @@
     .SimpleGrid(Model)
     .AddColumnsFromModel()
     .AddColumn(column => column.For(model => model.First).Sortable(false))
-    .AddColumn(column => column.Header("First").DisplayAs(model => model.First)/*.SortableBy(model => model.First)*/)
+    .AddColumn(column => column.Header("First").DisplayAs(model => model.First).SortableBy(model => model.First))
     .AddColumn(column => column.Header("Full Name").DisplayAs(model => $"{model.Last}, {model.First}"))
     .Sortable()
     .DefaultSortBy(model => model.RandomDate)
