--- a/Sockethead.Web/Areas/Samples/Views/Pager/Sample2.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Sample2.cshtml
@@ -5,5 +5,18 @@
     .SimpleGrid(Model)
     .AddColumnFor(model => model.First)
     .AddColumnFor(model => model)
+    .AddColumn(col => col
+        .For(model => model.JobTitle)
+        .Css(elements =>
+        {
+            elements.Header.AddStyle("font-style: italic");
+            elements.Item.AddStyle("font-weight: bold");
+        }))
+    .Css(elements =>
+    {
+        elements.Table
+            .AddClass("table-striped")
+            .AddClass("table-sm");
+    })
     .RenderAsync()
 )
