--- a/Sockethead.Web/Pages/Shared/_Layout.cshtml
+++ b/Sockethead.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Sockethead.Web</title>
+    <title>@ViewData["Title"] - Sockethead ASP.Net Package</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Sockethead.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - Eike Consulting, LLC - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
