--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies2.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies2.cshtml
@@ -32,7 +32,7 @@
 
     .AddColumnFor(model => model.Released)
 
-    .Css(elements => elements.Table
+    .AddCss(elements => elements.Table
         .AddClass("table-striped")
         .AddClass("table-sm"))
 
