--- a/Sockethead.Web/Areas/Samples/Views/Pager/Sample2.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Sample2.cshtml
@@ -12,7 +12,7 @@
             elements.Header.AddStyle("font-style: italic");
             elements.Item.AddStyle("font-weight: bold");
         }))
-    .Css(elements =>
+    .AddCss(elements =>
     {
         elements.Table
             .AddClass("table-striped")
