--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
@@ -4,6 +4,16 @@
 @(await Html
     .SimpleGrid(Model)
     .AddColumnsFromModel()
+    .AddCss(elements => elements.Table.AddClass("table-striped").AddStyle("color:black"))
+    .AddRowAction(movie => movie.Director.Contains("James"), css => css.AddStyle("background-color:red"))
+    .AddRowAction(movie => movie.Name.Contains("Rocky"), css => css.AddStyle("background-color:green"))
+    /*
+    .AddRowAction(rowAction =>
+    {
+        rowAction.RowFilter = movie => movie.Name.Contains("Rocky");
+        rowAction.CssBuilder.AddStyle("background-color:green");
+    })
+    */
     .Sortable()
     .RenderAsync()
 )
