TwoColumnGrid samples update.

--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
@@ -5,8 +5,8 @@
     .SimpleGrid(Model)
     .AddColumnsFromModel()
     .AddCss(elements => elements.Table.AddClass("table-striped").AddStyle("color:black"))
-    .AddRowAction(movie => movie.Director.Contains("James"), css => css.AddStyle("background-color:red"))
-    .AddRowAction(movie => movie.Name.Contains("Rocky"), css => css.AddStyle("background-color:green"))
+    .AddRowModifier(movie => movie.Director.Contains("James"), css => css.AddStyle("background-color:red"))
+    .AddRowModifier(movie => movie.Name.Contains("Rocky"), css => css.AddStyle("background-color:green"))
     /*
     .AddRowAction(rowAction =>
     {
