Cleaning up sample data

--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies1.cshtml
@@ -1,5 +1,4 @@
-﻿@using Sockethead.Razor.Grid;
-@model IQueryable<Sockethead.Web.Areas.Samples.Controllers.Movie>
+﻿@model IQueryable<Movie>
 
 @(await Html
     .SimpleGrid(Model)
