--- a/Sockethead.Web/Areas/Samples/Views/Pager/MoviesToss.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/MoviesToss.cshtml
@@ -1,6 +1,4 @@
-﻿@using Sockethead.Razor.Grid;
-@using Sockethead.Web.Areas.Samples.Controllers;
-@model IQueryable<Movie>
+﻿@model IQueryable<Movie>
 
 <table class="table table-striped table-sm">
     <tr>
