--- a/Sockethead.Web/Areas/Samples/Views/Pager/Sample1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Sample1.cshtml
@@ -1,5 +1,4 @@
-﻿@using Sockethead.Razor.Grid;
-@model IQueryable<Sockethead.Web.Areas.Samples.Controllers.SampleModel>
+﻿@model IQueryable<SampleModel>
 
 @(await Html
     .SimpleGrid(Model)
