--- a/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Sockethead.Web.Data.Entities;
+@using Sockethead.Razor.Grid;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
