--- a/Sockethead.Web/Areas/Samples/Views/Pager/Movies3.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Pager/Movies3.cshtml
@@ -1,5 +1,4 @@
-﻿@using Sockethead.Razor.Grid;
-@model IQueryable<Sockethead.Web.Areas.Samples.Controllers.Movie>
+﻿@model IQueryable<Movie>
 
 <div class="row">
     <div class="col-md-6">
