Reorganized Grid samples and add comments on Grid methods.

--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -30,8 +30,9 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 language-csharp">
             <partial name="_Alerts" />
+            <h2>@ViewData["Title"]</h2>
             @RenderBody()
         </main>
     </div>
