--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Sample1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Sample1.cshtml
@@ -13,8 +13,28 @@
         searchFilter: (source, query) => source.Where(model =>
             model.First.Contains(query, StringComparison.OrdinalIgnoreCase) ||
             model.Last.Contains(query, StringComparison.OrdinalIgnoreCase) ))
+    .RenderAsync()
+)
+
+<div class="language-csharp">
+
+<pre><code>@@(await Html
+    .SimpleGrid(Model)
+    .AddColumnsFromModel()
+    .AddColumn(column => column.For(model => model.First).Sortable(false))
+    .AddColumn(column => column.Header("First").DisplayAs(model => model.First).SortableBy(model => model.First))
+    .AddColumn(column => column.Header("Full Name").DisplayAs(model => $"{model.Last}, {model.First}"))
+    .Sortable()
+    .DefaultSortBy(model => model.RandomDate)
+    .AddSearch(
+        name: "Name",
+        searchFilter: (source, query) => source.Where(model =>
+            model.First.Contains(query, StringComparison.OrdinalIgnoreCase) ||
+            model.Last.Contains(query, StringComparison.OrdinalIgnoreCase) ))
     .AddSearch(
         name: "First Name Match",
         modelFilter: (model, query) => model.First.Equals(query, StringComparison.OrdinalIgnoreCase))
     .RenderAsync()
-)
+)</code></pre>
+
+</div>
