--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Playground.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Playground.cshtml
@@ -1,10 +1,34 @@
 ﻿@model IQueryable<Movie>
-
 @(await Html
     .SimpleGrid(Model)
     .AddColumnsFromModel()
+    .AddColumn(column => column
+        .Header("TwoColumnGrid in a SimpleGrid!")
+        .Encoded(false)
+        .DisplayAs(model => Html
+            .TwoColumnGrid()
+            .Add(model)
+            .RenderToString()))
     .AddSearch("Blah", searchFilter: (source, query) => source.Where(movie => movie.Name.Contains(query, StringComparison.OrdinalIgnoreCase)))
     .AddPager(options => options.RowsPerPage = 3)
     .RenderAsync()
 )
 
+<hr />
+
+<div>How meta is this?</div>
+
+@(await Html
+    .SimpleGrid(Model)
+    .AddColumnFor(model => model.Name)
+    .AddColumn(column =>  column
+        .Header("TwoColumnGrid")
+        .Encoded(false)
+        .DisplayAs(model => Html
+            .TwoColumnGrid()
+            .Add("Name", model.Name)
+            .Add(model)
+            .Add($"List of all movies inside the movie {model.Name}", Html.SimpleGrid(Model).AddColumnFor(model => model.Name).RenderToString(), encode: false)
+            .RenderToString()))
+    .RenderAsync()
+)
