Added support for DisplayAttribute Order and AutoGenerateField fields in SimpleGrid.

--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Sample1.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Sample1.cshtml
@@ -3,6 +3,7 @@
 @(await Html
     .SimpleGrid(Model)
     .AddColumnsFromModel()
+    .OrderColumns()
     .AddColumn(column => column.For(model => model.First).Sortable(false))
     .AddColumn(column => column.Header("First").DisplayAs(model => model.First).SortableBy(model => model.First))
     .AddColumn(column => column.Header("Full Name").DisplayAs(model => $"{model.Last}, {model.First}"))
